jsonapi_core/tests/compile_fail/missing_type.rs
use jsonapi_core::JsonApi;

#[derive(JsonApi)]
struct Bad {
    #[jsonapi(id)]
    id: String,
}

fn main() {}
