jsonapi_core/tests/compile_fail/missing_type.stderr
error: #[jsonapi(type = "...")] is required on the struct
 --> tests/compile_fail/missing_type.rs:4:8
  |
4 | struct Bad {
  |        ^^^
